1. 窗口聚焦时不会贴边隐藏了 2. 调整了部分布局 3. 修复了一些错误